univention-directory-manager-modules (15.0.11-23) unstable; urgency=low

  * Bug #52683: Add syntax class to select syntax class for EA

 -- Philipp Hahn <hahn@univention.de>  Mon, 27 Sep 2021 16:34:27 +0200

univention-directory-manager-modules (15.0.11-22) unstable; urgency=medium

  * Bug #53833: Fix problem with previous build

 -- Ole Schwiegert <schwiegert@univention.de>  Mon, 27 Sep 2021 11:45:00 +0200

univention-directory-manager-modules (15.0.11-21) unstable; urgency=medium

  * Bug #53833: expose sizelimit parameter in simple UDM API

 -- Ole Schwiegert <schwiegert@univention.de>  Mon, 27 Sep 2021 07:23:00 +0200

univention-directory-manager-modules (15.0.11-20) unstable; urgency=medium

  * Bug #53631: remove default value for accountActivationDate

 -- Florian Best <best@univention.de>  Thu, 09 Sep 2021 13:44:26 +0200

univention-directory-manager-modules (15.0.11-19) unstable; urgency=medium

  * Bug #53702: support cups-pdf scheme printers without destination

 -- Florian Best <best@univention.de>  Tue, 24 Aug 2021 15:57:14 +0200

univention-directory-manager-modules (15.0.11-18) unstable; urgency=medium

  * Bug #53631: New users/user property accountActivationDate

 -- Arvid <requate@univention.de>  Thu, 19 Aug 2021 09:42:35 +0200

univention-directory-manager-modules (15.0.11-17) unstable; urgency=low

  * Bug #53620: use keyword argument to improve forward compatibility

 -- Daniel Troeder <troeder@univention.de>  Thu, 19 Aug 2021 09:08:04 +0200

univention-directory-manager-modules (15.0.11-16) unstable; urgency=low

  * Bug #53667: the simple UDM API now exposes the "remove_childs" option
    of UDMs remove() function in the delete() method, to recursively delete
    objects below the DN of the object that is being deleted

 -- Daniel Troeder <troeder@univention.de>  Tue, 17 Aug 2021 11:57:35 +0200

univention-directory-manager-modules (15.0.11-15) unstable; urgency=medium

  * Bug #53653: fix modifying groups in certain conditions
